--- a/src/app/components/current-weather/current-weather.component.html
+++ b/src/app/components/current-weather/current-weather.component.html
@@ -4,7 +4,7 @@
     type="text"
     [(ngModel)]="cityName"
     class="form-control"
-    placeholder="Please write username"
+    placeholder="Please write cityname"
     aria-label="Recipient's username"
     aria-describedby="button-addon2"
   />
